--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,7 +12,10 @@
     <ion-content>
       <ion-list>
         <ion-item nav-clear menu-close href="#/reservation">
-          Reservation
+          Reservation (By Date)
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/reservationByResource">
+          Reservation (By Resource)
         </ion-item>
         <ion-item nav-clear menu-close href="#/myreservation">
           My Reservation
