--- a/www/templates/reservation/list.html
+++ b/www/templates/reservation/list.html
@@ -24,15 +24,15 @@
 			</div>
 		</div>
 		<div>
-			<table>
+			<table id="reservationList">
 				<tr>
 					<th></th>
 					<th class="th-timeslot" ng-repeat="timeslot in timeslotList.models">{{timeslot.name}}</th>
 				</tr>
 				<tr ng-repeat="group in resourceList.models | filter: inputFilter">
 					<td class="td-resource"><a href="" ng-click="modalViewResource(group)"><b>{{group.name}}</b></a> <div class="location" ng-bind="group.location"></div></td>
-					<td ng-repeat="item in group.timeslot.models" class="tableItem" ng-class="{'td-reserved': item.reservedBy != ''}">
-						<span ng-if="item.reservedBy"><a class="button button-clear button-white ion-person" ng-click="modalViewUser(item.reservedBy)"></a></span>
+					<td ng-repeat="item in group.timeslot.models" class="tableItem">
+						<span ng-if="item.reservedBy"><a class="button button-clear button-assertive ion-person" ng-click="modalViewUser(item.reservedBy)"></a></span>
 						<div ng-if="!item.reservedBy"><a class="button button-clear button-balanced ion-person-add" ng-click="create(group._id, item.date, item._id)"></a></div>
 					</td>				
 				</tr>	
