--- a/www/templates/reservation/listByResource.html
+++ b/www/templates/reservation/listByResource.html
@@ -24,8 +24,9 @@
 				<th class="th-timeslot" ng-repeat="timeslot in timeslotList.models">{{timeslot.name}}</th>
 			</tr>
 			<tr ng-repeat="dateObj in dateList">
-				<td class="td-resource"><b>{{dateObj.date | date: 'dd/MM/yyyy'}}</b></td>
-				<td ng-repeat="item in dateObj.timeslot.models" class="tableItem">
+				<td class="td-resource" ng-if="!dateObj.isWeekEnd"><b>{{dateObj.date | date: 'dd/MM/yy (EEE)'}}</b></td>
+				<td class="td-resource-holiday" ng-if="dateObj.isWeekEnd"><b>{{dateObj.date | date: 'dd/MM/yy (EEE)'}}</b></td>
+				<td ng-repeat="item in dateObj.timeslot.models" class="tableItem" ng-if="!dateObj.isWeekEnd">
 					<span ng-if="item.reservedBy"><a class="button button-clear button-assertive ion-person" ng-click="modalViewUser(item.reservedBy)"></a></span>
 					<div ng-if="!item.reservedBy"><a class="button button-clear button-balanced ion-person-add" ng-click="create(resource._id, dateObj.date, item._id)"></a></div>
 				</td>				
