Font size adjustment

--- a/www/templates/reservation/list.html
+++ b/www/templates/reservation/list.html
@@ -1,15 +1,11 @@
-<ion-view direction="xy">
+<ion-view>
 	<ion-nav-buttons side="left">
 	    <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
         <h1 class='title'>Reservation</h1>
 	</ion-nav-buttons>
 	
-	<ion-content direction="xy">
-		<label class="item item-input">
-		    <i class="icon ion-search placeholder-icon"></i>
-		    <input type="search" placeholder="Search" ng-model="inputFilter">
-		</label>
+	<ion-content>		
 		<div class='row'>
 			<button class="button icon-left ion-chevron-left button-clear button-dark nav-day" on-tap="$event.stopPropagation(); previousDay()"></button>			
 			<div class="col-70">
