--- a/www/templates/reservation/list.html
+++ b/www/templates/reservation/list.html
@@ -6,6 +6,19 @@
 	</ion-nav-buttons>
 	
 	<ion-content>
+		<label class="item item-input">
+		    <i class="icon ion-search placeholder-icon"></i>
+		    <input type="search" placeholder="Search" ng-model="inputFilter">
+		</label>
+		<div class='row'>
+			<button class="button icon-left ion-chevron-left button-clear button-dark nav-day" on-tap="$event.stopPropagation(); previousDay()"></button>			
+			<div class="col-70">
+				<ionic-datepicker input-obj="datepickerObject">
+				  <button class="button button-block button-positive"> {{datepickerObject.inputDate | date:'dd - MMMM - yyyy'}}</button>
+				</ionic-datepicker>
+			</div>	
+			<button class="button icon-right ion-chevron-right button-clear button-dark nav-day" on-tap="$event.stopPropagation(); nextDay()"></button>
+		</div>
 		<div>
 			<table id="reservationList">
 				<tr>
