--- a/www/templates/reservation/select.html
+++ b/www/templates/reservation/select.html
@@ -14,13 +14,17 @@
 	      </ion-header-bar>
 	      <ion-content>
 	        <div class="list">
+	          <label class="item item-input">
+			    <i class="icon ion-search placeholder-icon"></i>
+			    <input type="search" placeholder="Search" ng-model="resourceFilter" autofocus>
+			  </label>
 	          <!-- Single select -->
 	          <label
-	                 ng-repeat="item in model"
+	                 ng-repeat="item in model | filter: resourceFilter "
 	                 ng-if="!multiple"
 	                 ng-click="item.label = item.name; select(item); $emit('{{title}}',item)"
 	                 class="item item-text-wrap">
-	            {{item.name}}
+	            {{item.name}} &nbsp<small><small>{{item.location}}</small></small>
 	          </label>
 	        </div>
 	      </ion-content>
