--- a/www/templates/reservation/select.html
+++ b/www/templates/reservation/select.html
@@ -24,7 +24,7 @@
 	                 ng-if="!multiple"
 	                 ng-click="item.label = item.name; select(item); $emit('{{title}}',item)"
 	                 class="item item-text-wrap">
-	            {{item.name}} &nbsp<small><small>{{item.location}}</small></small>
+	            {{item.name}} &nbsp<small><small><em>{{item.location}}</em></small></small>
 	          </label>
 	        </div>
 	      </ion-content>
