--- a/www/templates/reservation/create.html
+++ b/www/templates/reservation/create.html
@@ -23,7 +23,7 @@
 	<label class="item item-input">
 	  <span class="input-label">Timeslot</span>
 	  	<ion-list>
-	  	<ion-radio ng-repeat="item in timeslotList.models" ng-value="item._id" ng-model="model.time._id" name="timeslot" ng-disabled="item.disabled">{{ item.name }} <b>{{ item.reservedBy }}</b></ion-radio>
+	  	<ion-checkbox ng-repeat="item in timeslotList.models" ng-value="item._id" ng-model="item.checked" name="timeslot" ng-disabled="item.disabled">{{ item.name }} <b>{{ item.reservedBy }}</b></ion-checkbox>
 	  	</ion-list>
 	</label>    
 	<label class="item item-input">
