--- a/www/templates/reservation/listByResource.html
+++ b/www/templates/reservation/listByResource.html
@@ -11,7 +11,8 @@
 				template-url='templates/reservation/select.html'
 				ng-selected="item"
 				ng-model="resourceList.models"
-				title="Select Resource">
+				title="Select Resource"
+				class="fancySelect">
 			</fancy-select-object>
 		</div>
 		<ion-list>
