--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -116,6 +116,10 @@ div.row .col {
   flex: 0 0 70%;
   max-width: 70%;
   text-align: center; }
+
+table#reservationList, table#reservationListByResource{
+	margin:0px auto;
+}	
   
 table#reservationList td, table#reservationList tr th, table#reservationListByResource td, table#reservationListByResource tr th {
    border: 1px solid black;
@@ -237,4 +241,12 @@ span.noReservation {
 	text-align: center;
 	font-style: italic;
 	color: #848484;
+}
+
+span.fancySelect, div.datepicker {
+	margin: 0px auto;
+}
+
+input[type='search'] {
+	text-align: center;
 }
