--- a/www/templates/reservation/list.html
+++ b/www/templates/reservation/list.html
@@ -2,19 +2,20 @@
 	<ion-nav-buttons side="left">
 	    <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
-        <h1 class='title'>Reservation</h1>
+        <h1 class='title'>{{'Reservation' | translate}}</h1>
 	</ion-nav-buttons>
 	
 	<ion-content direction="xy">
+		<ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
 		<label class="item item-input">
 		    <i class="icon ion-search placeholder-icon"></i>
-		    <input type="search" placeholder="Search" ng-model="inputFilter">
+		    <input type="search" placeholder="{{'Search' | translate}}" ng-model="inputFilter">
 		</label>
 		<div class='row'>
 			<button class="button icon-center ion-chevron-left button-clear button-dark nav-day" on-tap="$event.stopPropagation(); previousDay()"></button>			
 			<div class="col-66 datepicker">
 				<ionic-datepicker input-obj="datepickerObject">
-				  <button class="button button-block button-positive"> {{datepickerObject.inputDate | date:'dd - MMMM - yyyy'}}</button>
+				  <button class="button button-block button-positive"> {{datepickerObject.inputDate | date:'dd / MM / yyyy'}}</button>
 				</ionic-datepicker>
 			</div>	
 			<button class="button icon-center ion-chevron-right button-clear button-dark nav-day" on-tap="$event.stopPropagation(); nextDay()"></button>
