--- a/www/templates/reservation/select.html
+++ b/www/templates/reservation/select.html
@@ -16,7 +16,7 @@
 	        <div class="list">
 	          <label class="item item-input">
 			    <i class="icon ion-search placeholder-icon"></i>
-			    <input type="search" placeholder="Search" ng-model="resourceFilter" autofocus>
+			    <input type="search" placeholder="{{'Search' | translate}}" ng-model="resourceFilter" autofocus>
 			  </label>
 	          <!-- Single select -->
 	          <label
