--- a/www/templates/reservation/listByResource.html
+++ b/www/templates/reservation/listByResource.html
@@ -2,7 +2,7 @@
 	<ion-nav-buttons side="left">
 	    <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
-        <h1 class='title'>Reservation</h1>
+        <h1 class='title'>{{'Reservation' | translate}}</h1>
 	</ion-nav-buttons>
 	
 	<ion-content>
@@ -24,9 +24,9 @@
 				<th></th>
 				<th class="th-timeslot" ng-repeat="timeslot in timeslotList.models">{{timeslot.name}}</th>
 			</tr>
-			<tr ng-repeat="dateObj in dateList">
-				<td class="td-resource" ng-if="!dateObj.isWeekEnd"><b>{{dateObj.date | date: 'dd/MM/yy (EEE)'}}</b></td>
-				<td class="td-resource-holiday" ng-if="dateObj.isWeekEnd"><b>{{dateObj.date | date: 'dd/MM/yy (EEE)'}}</b></td>
+			<tr ng-repeat="dateObj in dateList">		
+				<td class="td-resource" ng-if="!dateObj.isWeekEnd"><b>{{dateObj.date | date: 'dd/MM/yy'}} (<span translate>{{dateObj.date | date: 'EEE'}}</span>)</b></td>
+				<td class="td-resource-holiday" ng-if="dateObj.isWeekEnd"><b>{{dateObj.date | date: 'dd/MM/yy'}} (<span translate>{{dateObj.date | date: 'EEE'}}</span>)</b></td>
 				<td ng-repeat="item in dateObj.timeslot.models" class="tableItem" ng-if="!dateObj.isWeekEnd">
 					<span ng-if="item.reservedBy && item.reservedBy.username === user.username"><i class="icon-person-color ion-person"></i></span>
 					<span ng-if="item.reservedBy && item.reservedBy.username != user.username"><a class="button button-small button-clear button-assertive ion-person" ng-click="modalViewUser(item.reservedBy)"></a></span>
@@ -35,7 +35,7 @@
 			</tr>	
 		</table>
 		</ion-list>
-		<ion-infinite-scroll ng-if="1< 2" on-infinite="loadMore()">
+		<ion-infinite-scroll on-infinite="loadMore()">
 		</ion-infinite-scroll>	
 	</ion-content>
 </ion-view>
