--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -23,6 +23,9 @@
         <ion-item nav-clear menu-close href="#/resource">
         	{{'Resource' | translate}}
         </ion-item>
+        <ion-item nav-clear menu-close href="#/timeslot">
+        	{{'Timeslot' | translate}}
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
