--- a/www/templates/reservation/list.html
+++ b/www/templates/reservation/list.html
@@ -9,7 +9,7 @@
 		<ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
 		<label class="item item-input">
 		    <i class="icon ion-search placeholder-icon"></i>
-		    <input type="search" placeholder="{{'Search' | translate}}" ng-model="inputFilter">
+		    <input type="search" placeholder="{{'Search Resource' | translate}}" ng-model="inputFilter">
 		</label>
 		<div class='row'>
 			<button class="button icon-center ion-chevron-left button-clear button-dark nav-day" on-tap="$event.stopPropagation(); previousDay()"></button>			
@@ -23,14 +23,14 @@
 		<div>
 			<table id="reservationList">
 				<tr>
-					<th></th>
+					<th class="th-col">Resource</th>
 					<th class="th-timeslot" ng-repeat="timeslot in timeslotList.models">{{timeslot.name}}</th>
 				</tr>
 				<tr ng-repeat="group in resourceList.models | filter: inputFilter">
 					<td class="td-resource"><a href="" ng-click="modalViewResource(group)"><b>{{group.name}}</b></a> <div class="location" ng-bind="group.location"></div></td>
 					<td ng-repeat="item in group.timeslot.models" class="tableItem">
-						<span ng-if="item.reservedBy && item.reservedBy.username === user.username"><i class="icon-person-color ion-person"></i></span>
-						<span ng-if="item.reservedBy && item.reservedBy.username != user.username"><a class="button button-small button-clear button-assertive ion-person" ng-click="modalViewUser(item.reservedBy)"></a></span>
+						<span ng-if="item.reservedBy && item.reservedBy.username === user.username"><i class="icon-person-color">Me</i></span>
+						<span ng-if="item.reservedBy && item.reservedBy.username != user.username"><a class="button button-small button-clear button-assertive" ng-click="modalViewUser(item.reservedBy)">{{item.reservedBy.username}}</a></span>
 						<div ng-if="!item.reservedBy"><a class="button button-small button-clear button-balanced ion-person-add" ng-click="create(group._id, item.date, item._id)"></a></div>
 					</td>				
 				</tr>	
