--- a/www/templates/reservation/listByResource.html
+++ b/www/templates/reservation/listByResource.html
@@ -21,15 +21,15 @@
 				<th colspan="6"><a href="" ng-click="modalViewResource()"><b>{{resource.name}}</b></a> <div class="location" ng-bind="resource.location"></div></th>
 			</thead>
 			<tr>
-				<th></th>
+				<th class="th-col">Date</th>
 				<th class="th-timeslot" ng-repeat="timeslot in timeslotList.models">{{timeslot.name}}</th>
 			</tr>
 			<tr ng-repeat="dateObj in dateList">		
 				<td class="td-resource" ng-if="!dateObj.isWeekEnd"><b>{{dateObj.date | date: 'dd/MM/yy'}} (<span translate>{{dateObj.date | date: 'EEE'}}</span>)</b></td>
 				<td class="td-resource-holiday" ng-if="dateObj.isWeekEnd"><b>{{dateObj.date | date: 'dd/MM/yy'}} (<span translate>{{dateObj.date | date: 'EEE'}}</span>)</b></td>
 				<td ng-repeat="item in dateObj.timeslot.models" class="tableItem" ng-if="!dateObj.isWeekEnd">
-					<span ng-if="item.reservedBy && item.reservedBy.username === user.username"><i class="icon-person-color ion-person"></i></span>
-					<span ng-if="item.reservedBy && item.reservedBy.username != user.username"><a class="button button-small button-clear button-assertive ion-person" ng-click="modalViewUser(item.reservedBy)"></a></span>
+					<span ng-if="item.reservedBy && item.reservedBy.username === user.username"><i class="icon-person-color">Me</i></span>
+					<span ng-if="item.reservedBy && item.reservedBy.username != user.username"><a class="button button-small button-clear button-assertive" ng-click="modalViewUser(item.reservedBy)">{{item.reservedBy.username}}</a></span>
 					<div ng-if="!item.reservedBy"><a class="button button-small button-clear button-balanced ion-person-add" ng-click="create(resource._id, dateObj.date, item._id)"></a></div>
 				</td>				
 			</tr>	
