--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -179,7 +179,7 @@ table#reservationList th.th-timeslot, table#reservationListByResource th.th-time
 }
 
 table#reservationList th.th-col, table#reservationListByResource th.th-col {
-	background-color: #58abc3;
+	background-color: #db9dcf;
 	font-weight: bold;
 	text-align: left;
 }
